=head1 OmniPITR

=encoding utf8

=head2 2013-12-10

=over

=item * change retention of error messages in omnipitr-monitor cache to 3 days
(from 30). This is to make sure that the cache file will not be too big.

=back

=head2 2013-11-29

=over

=item * *meta* files are generated for backups. These files contain
information when backup has started, and what is the minimal xlog file
required for recovery from it.

=back

=head2 2013-08-23

=over

=item * Release of version 1.2.0

=item * --dst-pipe for omnipitr-backup-master, omnipitr-backup-slave and
omnipitr-archive

=item * support for using %r in omnipitr-restore for cleanup purposes

=item * --skip-xlog option to disable creation of xlog tarball from backup
processes

=item * various bugfixes

=back

=head2 2013-04-01

=over

=item * Release of version 1.1.0, including all changes since release 1.0.0

=back

=head2 2012-12-11

=over

=item * Provide support for --help option

=item * Add support for config file

=item * Add --version option to all programs.

=back

=head2 2012-12-04

=over

=item * Make temp directories based on PID, to allow easy running (for example)
2 slaves on the same machine.

=back

=head2 2012-12-04

=over

=item * Add option to make omnipitr-restore able to remove files from walarchive
before serving next xlog to PostgreSQL. This is important in cases where slave
falls back a lot, and it's catching up - but it doesn't start to remove old,
obsolete wal segments before it will fully catch up. Now, with new option
(--remove-before) it will delete old wal segments during catchup phase too.

=back

=head2 2012-08-08

=over

=item * Make sanity-check.sh return sensible exit code - pull from François
Beausoleil ( https://github.com/francois )

=back

=head2 2012-08-08

=over

=item * Fix log line parsing in omnipitr-monitor - the bug in there prevented
omnipitr-monitor from working when running on server with timezone "before" UTC
(for example UTC-0400).

=back

=head2 2012-07-02

=over
